# emyco

./: package-lock.json  package.json
src/: App.tsx  Gameboy.tsx  GameboyCanvas.tsx  RomList.tsx  RomPicker.tsx
src-tauri/: .gitignore  Cargo.toml  POKEMON BLUE.sav  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: emulator.rs  lib.rs  main.rs
src-tauri/src/gameboy/: apu.rs  cpu.rs  display.rs  joypad.rs  memory.rs  mod.rs  ppu.rs  serial.rs  timer.rs
src-tauri/src/gameboy/apu/: channel.rs
src-tauri/src/gameboy/cpu/: test.rs
src-tauri/src/gameboy/memory/: cartridge.rs  mbc.rs
src/components/: ToggleSwitch.tsx
src/gameboy/: Gameboy.tsx  GameboyCanvas.tsx
src/hooks/: useDefaultKeymap.ts  useKeyPress.ts
src/utilities/: metadata.ts
