[package]
name = "emyco"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "emyco_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
anyhow = "1.0.95"
arraydeque = "0.5.1"
bitflags = "2.7.0"
blip_buf = "0.1.5"
chrono = "0.4.39"
crossbeam = "0.8.4"
env_logger = "0.11.6"
# fundsp = "0.20.0"
# lazy_static = "1.5.0"
log = "0.4.25"
# rand = "0.8.5"
rodio = "0.20.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
